# endfield

./: WORK_PLAN.md  config.json  database.json  error.txt  extract_data.js  extract_data.py  facilities_data copy.json  facilities_geometry.json  fix-icons.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agent/workflows/: constraintlimitedoptimizer.md  sistem.md  sistem1.md  sistem2.md  work.md
doc/: aic_mechanics.md  belt_pathfinding.md  constraint_limited_optimizer.md  facilities_spec.md  logistic.md  logistics_logic_refinement.md  old_codebase_analysis.md  recipe_data_structure.md  simulator_integration.md  spatial_and_logistics_specs.md
old/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
old/src/: i18n.ts  main.tsx
old/src/data/: facilities.ts  index.ts  items.ts  recipes.ts
old/src/hooks/: useProductionStats.ts  useProductionTable.ts
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  config.json  database.json  tauri.conf.json
src-tauri/data/: facilities.json  facilities_complete.json  items.json  items_complete.json  recipes.json  recipes_complete.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: data_loader.rs  facility.rs  grid.rs  item.rs  layout_eval.wgsl  layout_generator.rs  logistics.rs  logistics_engine.rs  mod.rs  optimizer.rs  power_grid.rs  recipe.rs  recipe_solver.rs  recipe_solver_tests.rs
src/components/: PlanningPage.tsx  ResultsPage.tsx  Viewport.tsx
src/hooks/: useSandbox.ts
src/utils/: logger.ts  pathfinder.ts
tools/: geometry_editor.py
(+53 files in other folders)
